# ImageConvert

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt  ImageFile.cpp  ImageFile.h  ImageFileHeader.cpp  ImageTool.cpp  ImageType.cpp  ImageType.h  SourceImage.cpp  SourceImage.h  image.cpp  image.h  imagefile.cpp  imagefile.h  imagefileheader.cpp  imagefileheader.h  imagetool.cpp  imagetype.cpp  imagetype.h  sourceimage.cpp  sourceimage.h
src/codec/: codec.cpp  codec.h  codecfactory.cpp  codecfactory.h  codecpng.cpp  codecpng.h
testcase/: CMakeLists.txt  resource.cpp
testcase/codec/: CMakeLists.txt  codec_tc.cpp
testcase/imageConvert/: CMakeLists.txt  imagetool.cpp
testcase/resource/: CMakeLists.txt  resource_tc.cpp
tool/: CMakeLists.txt  Color.cpp  Color.h  Command.cpp  Command.h  Resource.cpp  Resource.h  color.cpp  command.cpp  file.cpp  file.h  resource.cpp  resource.h
